tests/baselines/reference/checkJsdocSatisfiesTag8.errors.txt
/a.js(6,5): error TS2322: Type 'string' is not assignable to type 'boolean'.


==== /a.js (1 errors) ====
    /** @typedef {Object.<string, boolean>} Facts */
    
    // Should be able to detect a failure here
    const x = /** @satisfies {Facts} */ ({
        m: true,
        s: "false"
        ~
!!! error TS2322: Type 'string' is not assignable to type 'boolean'.
    })
    